// Generated by ReScript, PLEASE EDIT WITH CARE

import * as React from "react";
import * as Vitest from "rescript-vitest/src/Vitest.bs.js";
import * as Vitest$1 from "vitest";
import * as ReactTestingLibrary from "rescript-react-testing-library/src/ReactTestingLibrary.bs.js";

function Button$dotspec$DummyComponent(props) {
  return React.createElement("div", undefined, React.createElement("label", undefined, "Choose a color"), React.createElement("select", undefined, React.createElement("option", undefined, "Red"), React.createElement("option", undefined, "Green"), React.createElement("option", {
                      onClick: (function (param) {
                          console.log("Blue");
                        })
                    }, "Blue")));
}

var DummyComponent = {
  make: Button$dotspec$DummyComponent
};

Vitest.describe("DummyComponent", undefined, (function (param) {
        Vitest$1.beforeEach(function () {
              return ReactTestingLibrary.renderOnScreen(React.createElement(Button$dotspec$DummyComponent, {}));
            });
        Vitest.test("render Red option", undefined, (function (param) {
                Vitest$1.expect(ReactTestingLibrary.getByRole(ReactTestingLibrary.makeByRoleOptions(undefined, undefined, "Red", undefined), {
                            NAME: "Str",
                            VAL: "option"
                          }, document)).toMatchSnapshot();
              }));
        Vitest.test("render Green option", undefined, (function (param) {
                Vitest$1.expect(ReactTestingLibrary.getByRole(ReactTestingLibrary.makeByRoleOptions(undefined, undefined, "Green", undefined), {
                            NAME: "Str",
                            VAL: "option"
                          }, document)).toMatchSnapshot();
              }));
        Vitest.test("render Blue option", undefined, (function (param) {
                Vitest$1.expect(ReactTestingLibrary.getByRole(ReactTestingLibrary.makeByRoleOptions(undefined, undefined, "Blue", undefined), {
                            NAME: "Str",
                            VAL: "option"
                          }, document)).toMatchSnapshot();
              }));
      }));

export {
  DummyComponent ,
}
/*  Not a pure module */
